--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -111,14 +111,16 @@ jobs:
 
       - name: 获取APK文件路径
         run: |
-          apks=($(find project -type f -name "*.apk" | head -n 2))
+          # 修改路径为Android标准输出目录并增加调试信息
+          APK_DIR="project/app/build/outputs/apk/debug/"
+          apks=($(find "$APK_DIR" -type f -name "*.apk" | sort -r | head -n 2))
           echo "APK1_PATH=${apks[0]}" >> $GITHUB_ENV
           echo "APK2_PATH=${apks[1]}" >> $GITHUB_ENV
           echo "APK1_NAME=${apks[0]##*/}" >> $GITHUB_ENV
           echo "APK2_NAME=${apks[1]##*/}" >> $GITHUB_ENV
-          # 添加调试输出，验证APK路径
-          echo "DEBUG: APK1_PATH=$APK1_PATH"
-          echo "DEBUG: APK2_PATH=$APK2_PATH"
+          # 增加详细调试输出
+          echo "DEBUG: APK_DIR=$APK_DIR"
+          echo "DEBUG: FOUND_APRS=$(find "$APK_DIR" -type f -name "*.apk")"
 
       - name: 上传第一个APK
         if: ${{ env.APK1_PATH != null && env.APK1_PATH != '' }}
