--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -111,16 +111,28 @@ jobs:
 
       - name: 获取APK文件路径
         run: |
-          # 修改路径为Android标准输出目录并增加调试信息
-          APK_DIR="project/app/build/outputs/apk/debug/"
-          apks=($(find "$APK_DIR" -type f -name "*.apk" | sort -r | head -n 2))
+          # 修改路径匹配逻辑，增加容错处理和调试信息
+          APK_SEARCH_PATH="project/app/build/outputs/apk/"
+          echo "DEBUG: 开始查找APK文件..."
+          echo "DEBUG: 当前目录结构:"
+          find project -type d -name "*.apk" -o -name "apk" | sort
+
+          # 使用find命令递归查找所有APK文件并按修改时间排序
+          apks=($(find "$APK_SEARCH_PATH" -type f -name "*.apk" 2>/dev/null | sort -r | head -n 2))
+          
+          if [ ${#apks[@]} -eq 0 ]; then
+            echo "ERROR: 未找到任何APK文件，请检查以下内容："
+            echo "1. 构建命令是否正确执行"
+            echo "2. 是否配置了正确的输出路径"
+            echo "3. 项目结构是否符合预期"
+            exit 1
+          fi
+
           echo "APK1_PATH=${apks[0]}" >> $GITHUB_ENV
-          echo "APK2_PATH=${apks[1]}" >> $GITHUB_ENV
+          echo "APK2_PATH=${apks[1]:-}" >> $GITHUB_ENV
           echo "APK1_NAME=${apks[0]##*/}" >> $GITHUB_ENV
-          echo "APK2_NAME=${apks[1]##*/}" >> $GITHUB_ENV
-          # 增加详细调试输出
-          echo "DEBUG: APK_DIR=$APK_DIR"
-          echo "DEBUG: FOUND_APRS=$(find "$APK_DIR" -type f -name "*.apk")"
+          echo "APK2_NAME=${apks[1]##*/:-}" >> $GITHUB_ENV
+          echo "DEBUG: 找到${#apks[@]}个APK文件，路径分别为：${apks[0]} 和 ${apks[1]:-无}"
 
       - name: 上传第一个APK
         if: ${{ env.APK1_PATH != null && env.APK1_PATH != '' }}
