--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -111,27 +111,24 @@ jobs:
 
       - name: 获取APK文件路径
         run: |
-          # 设置APK搜索路径（根据实际项目结构调整）
-          APK_SEARCH_PATH="./project/app/build/outputs/apk/debug"
+          # 新增递归搜索整个项目目录的APK文件
+          APK_SEARCH_PATH="./project"
           
-          # 递归查找所有子目录中的APK文件并验证文件存在性
-          apks=($(find $APK_SEARCH_PATH -type f -name "*.apk" 2>/dev/null | sort -r | head -n 2))
+          # 改进查找逻辑：按修改时间排序并严格验证
+          apks=($(find $APK_SEARCH_PATH -type f -name "*.apk" -exec stat -c "%Y %n" {} \; | sort -nr | head -n 2 | awk '{print $2}'))
           
-          # 新增：验证文件实际存在性
-          for apk in "${apks[@]}"; do
-            if [ ! -f "$apk" ]; then
-              echo "ERROR: 找到的APK路径 '$apk' 实际不存在！"
-              exit 1
-            fi
-          done
-          
-          # 新增：将APK路径写入环境变量供后续步骤使用
-          echo "APK1_PATH=${apks[0]}" >> $GITHUB_ENV
-          if [ ${#apks[@]} -gt 1 ]; then
-            echo "APK2_PATH=${apks[1]}" >> $GITHUB_ENV
-          else
-            echo "APK2_PATH=" >> $GITHUB_ENV
+          # 增强空值处理逻辑
+          if [ ${#apks[@]} -eq 0 ]; then
+            echo "ERROR: 未找到任何APK文件，请检查以下内容："
+            echo "1. 构建过程是否成功生成APK"
+            echo "2. 构建类型是否匹配（debug/release）"
+            echo "3. 项目模块名称是否与路径匹配"
+            exit 1
           fi
+          
+          # 简化环境变量写入逻辑
+          echo "APK1_PATH=${apks[0]}" >> $GITHUB_ENV
+          echo "APK2_PATH=${apks[1]:-}" >> $GITHUB_ENV  # 使用bash参数扩展简化空值处理
           
           echo "DEBUG: 找到${#apks[@]}个APK文件，路径分别为：${apks[0]} 和 ${apks[1]:-无}"
 
