--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -126,9 +126,17 @@ jobs:
             exit 1
           fi
           
-          # 简化环境变量写入逻辑
-          echo "APK1_PATH=${apks[0]}" >> $GITHUB_ENV
-          echo "APK2_PATH=${apks[1]:-}" >> $GITHUB_ENV  # 使用bash参数扩展简化空值处理
+          # 增加文件存在性验证
+          for apk in "${apks[@]}"; do
+            if [ ! -f "$apk" ]; then
+              echo "ERROR: 文件 $apk 不存在，请检查路径有效性"
+              exit 1
+            fi
+          done
+          
+          # 添加双引号转义特殊字符
+          echo "APK1_PATH=\"${apks[0]}\"" >> $GITHUB_ENV
+          echo "APK2_PATH=\"${apks[1]:-}\"" >> $GITHUB_ENV  # 使用bash参数扩展简化空值处理
           
           echo "DEBUG: 找到${#apks[@]}个APK文件，路径分别为：${apks[0]} 和 ${apks[1]:-无}"
 
@@ -141,7 +149,8 @@ jobs:
           body: ${{ env.RELEASE_BODY }}
           draft: false
           prerelease: false
+          # 使用双引号包裹文件路径变量
           files: |
-            - ${{ env.APK1_PATH }}
-            - ${{ env.APK2_PATH }}
+            - "${{ env.APK1_PATH }}"
+            - "${{ env.APK2_PATH }}"
           token: ${{ secrets.GITHUB_TOKEN }}
