--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -130,8 +130,16 @@ jobs:
             fi
           done
           
-          echo "APK1_PATH=${apks[0]}" >> $GITHUB_ENV
-          echo "APK2_PATH=${apks[1]:-}" >> $GITHUB_ENV
+          # 创建缓存目录并复制APK文件
+          mkdir -p ./apks_cache
+          cp -f "${apks[0]}" ./apks_cache/
+          if [ -n "${apks[1]}" ]; then
+            cp -f "${apks[1]}" ./apks_cache/
+          fi
+          
+          # 修改环境变量为缓存目录路径
+          echo "APK1_PATH=./apks_cache/$(basename ${apks[0]})" >> $GITHUB_ENV
+          echo "APK2_PATH=./apks_cache/$(basename ${apks[1]:-})" >> $GITHUB_ENV
           
           echo "DEBUG: 找到${#apks[@]}个APK文件，路径分别为：${apks[0]} 和 ${apks[1]:-无}"
 
@@ -145,6 +153,6 @@ jobs:
           draft: false
           prerelease: false
           files: |
-            - "${{ env.APK1_PATH }}"  # 新增双引号包裹路径
-            - "${{ env.APK2_PATH }}"  # 新增双引号包裹路径
+            - ${{ env.APK1_PATH }}
+            - ${{ env.APK2_PATH }}
           token: ${{ secrets.GITHUB_TOKEN }}
