--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -71,7 +71,7 @@ jobs:
         if: ${{ !env.SKIP_BUILD }}
       
       - name: 提取版本信息
-        working-directory: ${{ env.GITHUB_WORKSPACE }}/project
+        working-directory: ./project
         run: |
           BUILD_GRADLE="app/build.gradle.kts"
           if [ ! -f "$BUILD_GRADLE" ]; then
