--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -71,7 +71,7 @@ jobs:
         if: ${{ !env.SKIP_BUILD }}
       
       - name: 提取版本信息
-        working-directory: ./project
+        working-directory: ${{ github.workspace }}/project
         run: |
           BUILD_GRADLE="app/build.gradle.kts"
           if [ ! -f "$BUILD_GRADLE" ]; then
@@ -102,7 +102,7 @@ jobs:
         if: ${{ !env.SKIP_BUILD }}
       
       - name: 构建应用
-        working-directory: ./project
+        working-directory: ${{ github.workspace }}/project
         run: |
           ./gradlew --no-daemon assembleDebug
         if: ${{ !env.SKIP_BUILD }}
