--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -71,14 +71,11 @@ jobs:
         if: ${{ !env.SKIP_BUILD }}
       
       - name: 提取版本信息
-        working-directory: ${{ github.workspace }}/project
         run: |
-          BUILD_GRADLE="app/build.gradle.kts"
-          if [ ! -f "$BUILD_GRADLE" ]; then
-            echo "ERROR: $BUILD_GRADLE not found"
-            exit 1
-          fi
-
+          BUILD_GRADLE="build.gradle.kts"
+          # 从远程仓库获取最新文件内容
+          git show HEAD:app/build.gradle.kts > $BUILD_GRADLE || exit 1
+          
           # 提取版本变量
           major=$(grep -m 1 'val major' $BUILD_GRADLE | awk -F '=' '{print $2}' | tr -d ' ')
           minor=$(grep -m 1 'val minor' $BUILD_GRADLE | awk -F '=' '{print $2}' | tr -d ' ')
@@ -102,7 +99,7 @@ jobs:
         if: ${{ !env.SKIP_BUILD }}
       
       - name: 构建应用
-        working-directory: ${{ github.workspace }}/project
+        working-directory: ./project
         run: |
           ./gradlew --no-daemon assembleDebug
         if: ${{ !env.SKIP_BUILD }}
