--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -70,39 +70,6 @@ jobs:
         run: git clone --depth=1 ${{ env.PROJECT_REPO }}.git project
         if: ${{ !env.SKIP_BUILD }}
       
-      - name: 提取版本信息
-        run: |
-          BUILD_GRADLE="app/build.gradle.kts"
-          # 创建目标目录确保文件可写入
-          mkdir -p app
-          # 从远程仓库直接获取文件内容（不依赖本地克隆）
-          PROJECT_API_URL=$(echo "${{ env.PROJECT_REPO }}" | sed 's@.*github.com.@@;s@.git$@@;s@^@https://api.github.com/repos/@')
-          curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-               -H "Accept: application/vnd.github.v3.raw" \
-               "$PROJECT_API_URL/contents/$BUILD_GRADLE?ref=main" > $BUILD_GRADLE || exit 1
-          
-          # 提取版本变量
-          major=$(grep -m 1 'val major' $BUILD_GRADLE | awk -F '=' '{print $2}' | tr -d ' ')
-          minor=$(grep -m 1 'val minor' $BUILD_GRADLE | awk -F '=' '{print $2}' | tr -d ' ')
-          patch=$(grep -m 1 'val patch' $BUILD_GRADLE | awk -F '=' '{print $2}' | tr -d ' ')
-          buildTag=$(grep -m 1 'val buildTag' $BUILD_GRADLE | awk -F '=' '{print $2}' | sed 's/[" ]//g')
-          
-          # 新增：提取buildTargetCode逻辑
-          buildTargetCode=$(grep -m 1 'val buildTargetCode' $BUILD_GRADLE | sed -n 's/.*"\(.*\)".*/\1/p')
-          
-          # 构造标签（根据buildTag类型决定格式）
-          if [[ "$buildTag" == *"alpha"* || "$buildTag" == *"beta"* ]]; then
-            LATEST_TAG="$major.$minor.$patch-$buildTag.$buildTargetCode"
-          else
-            LATEST_TAG="$major.$minor.$patch-$buildTag"
-          fi
-
-          # 输出到环境变量
-          echo "RELEASE_TAG=$LATEST_TAG" >> $GITHUB_ENV
-          echo "RELEASE_NAME=Build for $LATEST_TAG" >> $GITHUB_ENV
-          echo "RELEASE_BODY=Automated build for version $LATEST_TAG" >> $GITHUB_ENV
-        if: ${{ !env.SKIP_BUILD }}
-
       - name: 配置Gradle缓存
         uses: actions/cache@v3
         with:
@@ -147,6 +114,24 @@ jobs:
           else
             echo "APK2_PATH=" >> $GITHUB_ENV
           fi
+        if: ${{ !env.SKIP_BUILD }}
+
+      - name: 提取版本信息
+        run: |
+          # 设置ANDROID_HOME环境变量（如果未设置）
+          if [ -z "$ANDROID_HOME" ]; then
+            export ANDROID_HOME=/usr/local/lib/android/sdk
+          fi
+          
+          # 使用aapt2从APK文件中提取版本名称
+          VERSION_NAME=$($ANDROID_HOME/build-tools/*/aapt2 dump badging "${{ env.APK1_PATH }}" | \
+                        grep -oP "versionName='\K[^']+" | \
+                        head -1)
+          
+          # 输出到环境变量
+          echo "RELEASE_TAG=$VERSION_NAME" >> $GITHUB_ENV
+          echo "RELEASE_NAME=Build for $VERSION_NAME" >> $GITHUB_ENV
+          echo "RELEASE_BODY=Automated build for version $VERSION_NAME" >> $GITHUB_ENV
         if: ${{ !env.SKIP_BUILD }}
 
       - name: 创建发布版本
